cabal-version:      3.6
name:               salo
version:            0.1.0.0
synopsis:           Salo is a toolset to agnostically build and deploy OS images remotely.
license:            MIT
author:             SEMC
maintainer:         bobbbay.b@gmail.com

extra-source-files:
    README.org

library
    exposed-modules:    Salo
                      , Salo.Language.Lexer
                      , Salo.Language.Syntax

    build-depends:      base                  ^>=4.14.3.0
    Build-depends:      base, array
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-tool-depends: alex:alex
                      , happy:happy

Test-Suite test-salo-language
    type:               detailed-0.9
    hs-source-dirs:     src
    test-module:        Salo.Language.Test
    build-depends:      base                  ^>=4.14.3.0
                      , Cabal                 ^>=3.2.1.0

executable salo
    main-is:            Main.hs
    build-depends:      base                                  ^>=4.14.3.0
                      , salo
    hs-source-dirs:   app
    default-language: Haskell2010
