cabal-version:      3.0
name:               salo
version:            0.0.0
synopsis:           Salo is a toolset to agnostically build and deploy OS images remotely.
license:            MIT
author:             SEMC
maintainer:         bobbbay.b@gmail.com

common base
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                      , FlexibleContexts

    build-depends:      base
                      , text

library
    import:             base
    hs-source-dirs:     src
    
    exposed-modules:    Salo
                      , Salo.Language.Lexer
                      , Salo.Language.Parser
                      , Salo.Language.Syntax

    build-tool-depends: alex:alex
                      , happy:happy

    build-depends:      array
                      , mtl

Test-Suite test-salo-language
    import:             base
    type:               detailed-0.9
    hs-source-dirs:     src
    test-module:        Salo.Language.Test
    build-depends:      Cabal
                      , salo

executable salo
    import:             base
    main-is:            Main.hs
    hs-source-dirs:     app
    build-depends:      salo
                      , optparse-applicative
