cabal-version:          3.0
name:                   salo
version:                0.0.0.0
synopsis:               Declarative, reproducible, typed build and deployment for operating systems.
description:            Salo is a declarative, reproducible, statically-typed configuration language for building and deploying operating system images. This leads to composable, scalable, and functional operating systems in-situ.
category:               Language
license:                MIT
author:                 SEMC
maintainer:             bobbbay.b@gmail.com

common base
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                      , FlexibleContexts

    build-depends:      base  <= 4.5
                      , text

library
    import:             base
    hs-source-dirs:     src
    
    exposed-modules:    Salo
                      , Salo.Language.Lexer
                      , Salo.Language.Parser
                      , Salo.Language.Syntax

    build-tool-depends: alex:alex
                      , happy:happy

    build-depends:      array
                      , mtl
                      , containers

Test-Suite test-salo-language
    import:             base
    type:               detailed-0.9
    hs-source-dirs:     src
    test-module:        Salo.Language.Test
    build-depends:      Cabal
                      , salo

executable salo
    import:             base
    hs-source-dirs:     app
    other-modules:      Main.Repl
                      , Main.Run
    main-is:            Main.hs
    build-depends:      salo
                      , optparse-applicative
                      , mtl
                      , haskeline
                      , directory
