[package]
name = "salo"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/semc-labs/salo"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
ariadne = "0.1.2"
color-eyre = { version = "0.5.11", features = ["issue-url"] }
anyhow = "1.0.42"
thiserror = "1.0.26"
enum-display-derive = "0.1.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
itertools = "0.10.1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
linefeed = "0.6.0"
rand = "0.8.4"
