[package]
name = "saloc-lib"
version = "0.0.0"
edition = "2018"
repository = "https://github.com/semc-labs/salo"
description = "Library of the compiler for the Salo language: a toolset to agnostically build and deploy OS images remotely."
license = "MIT"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }      # Command-line args

color-eyre = { version = "0.5.11", features = ["issue-url"] } # Error handling
tracing = "0.1.26"                                            # Tracing
tracing-subscriber = "0.2.19"                                 # More of that

lalrpop-util = "0.19.6"                                       # Parsing
ariadne = "0.1.2"                                             # Parser error formatting

typestate = "0.8.0"                                           # Typestate macros