[package]
name = "saloc"
version = "0.0.0"
edition = "2018"

[dependencies]
saloc-lib = { path = "../saloc-lib" }

clap = { version = "3.0.0-beta.2", features = ["yaml"] }      # Command-line args
linefeed = "0.6.0"                                            # REPL

color-eyre = { version = "0.5.11", features = ["issue-url"] } # Error handling
tracing = "0.1.26"                                            # Tracing
tracing-subscriber = "0.2.19"                                 # More of that
